--- a/src/components/main/person-list/person-list.css
+++ b/src/components/main/person-list/person-list.css
@@ -1,5 +1,5 @@
 .person-list {
-    width: 40%;
+    width: 400px;
     height: 100vh;
     overflow: hidden;
 }
@@ -18,7 +18,7 @@
     width: 100%;
     height: 50px;
     align-items: center;
-    margin-bottom: 5vw;
+    margin-bottom: 20px;
 }
 
 .feature__avatar {
