--- a/src/components/main/map/map.css
+++ b/src/components/main/map/map.css
@@ -1,4 +1,24 @@
-.map {
+.map-container {
     width: 79%;
-    height: 100vh;
+    height: 100vh
+}
+
+.map {
+    width: 100%;
+    height: 100vh
+}
+
+.popup {
+    position: absolute;
+    width: 250px;
+    height: 90px;
+    padding: 10px 0;
+    left: -125px;
+    bottom: 0;
+    background-color: white;
+    border-radius: 30px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    align-items: center;
 }
