--- a/src/components/main/map/map.css
+++ b/src/components/main/map/map.css
@@ -1,5 +1,5 @@
 .map-container {
-    width: 79%;
+    width: 80%;
     height: 100vh
 }
 
@@ -14,11 +14,12 @@
     height: 90px;
     padding: 10px 0;
     left: -125px;
-    bottom: 0;
+    bottom: 10px;
     background-color: white;
-    border-radius: 30px;
+    border-radius: 10px;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-around;
     align-items: center;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
