--- a/src/components/main/person-list/person-list.css
+++ b/src/components/main/person-list/person-list.css
@@ -15,15 +15,17 @@
 .feature {
     display: flex;
     flex-flow: row nowrap;
+    cursor: pointer;
     width: 100%;
-    height: 50px;
+    height: 70px;
     align-items: center;
-    margin-bottom: 20px;
+    border-bottom: 1px solid rgba(60, 60, 60, 0.5);
 }
 
 .feature__avatar {
     width: 50px;
     height: 50px;
+    margin-left: 10px;
     border-radius: 50%;
 }
 
@@ -31,7 +33,7 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-around;
-    height: 90%;
+    height: 80%;
     margin-left: 10px;
     font-size: 16px;
 }
